--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body{
 }
 
 #showcase {
-  background-image:url('http://traversymedia.com/downloads/assets/beachshowcase.jpg');
+  background-image:url('bg-image.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
