--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body{
 }
 
 #showcase {
-  background-image:url('bg-image.jpg');
+  background-image:url('bg-img.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -26,8 +26,8 @@ body{
 #showcase .button {
   font-size: 18px;
   text-decoration: none;
-  color: #926239;
-  border: #926239 1px solid;
+  color: white;
+  border: white 1px solid;
   border-radius: 10px;
   margin-top: 20px;
   padding: 10px 20px;
@@ -99,3 +99,36 @@ a.custom-card,
 a.custom-card:hover {
   text-decoration: none;
 }
+
+
+/* page scroll at top */
+#scroll {
+  position:fixed;
+  right:10px;
+  bottom:10px;
+  cursor:pointer;
+  width:50px;
+  height:50px;
+  background-color:#3498db;
+  text-indent:-9999px;
+  display:none;
+  -webkit-border-radius:60px;
+  -moz-border-radius:60px;
+  border-radius:60px
+}
+#scroll span {
+  position:absolute;
+  top:50%;
+  left:50%;
+  margin-left:-8px;
+  margin-top:-12px;
+  height:0;
+  width:0;
+  border:8px solid transparent;
+  border-bottom-color:#ffffff;
+}
+#scroll:hover {
+  background-color:#e74c3c;
+  opacity:1;filter:"alpha(opacity=100)";
+  -ms-filter:"alpha(opacity=100)";
+} 
